--- a/my-app/src/index.css
+++ b/my-app/src/index.css
@@ -1,3 +1,8 @@
+@import "gestalt/dist/gestalt.css";
+          @import "gestalt-datepicker/dist/gestalt-datepicker.css";
+          * { margin: 0; padding: 0;}
+          body, html, #root { height: 100%; }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
